Fix margin spacing for button

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,6 @@ a:link {
   border-width: 3px;
   border-radius: 6px;
   color: #333;
-  margin: 0;
 }
 
 a:hover {
